assets/style/airport.css
#airport-switch {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  pointer-events: none;
  background-color: rgba(15, 25, 20, 1);
  border: 6px solid rgba(31, 65, 48, 1.0);
  box-shadow: 0 0 50px -10px rgba(0,0,0,.3);
  border-radius: 8px;
  color: #ddd;
  font-size: 12px;
  padding: 0px 10px 0px 10px;
  margin: auto;
  width: 100%;
  max-width: 500px;
  height: auto;
  max-height: calc(85% - 2.3em - 20px);
  overflow-y: auto;
  transition: opacity 0.5s ease;
}

#airport-switch.open {
  pointer-events: auto;
  opacity: 1;
}

#airport-list {
  background-color: rgba(15, 25, 20, 1);
  /*border: 2px solid rgba(31, 65, 48, 1.0);*/
  border: 2px solid rgba(31, 65, 48, 1.0);
  /*box-shadow: 0 0 50px -10px rgba(0,0,0,.3);*/
  border-radius: 10px;
  color: #ddd;
  font-size: 100%;
  padding: 5px 5px;
  /*margin: 0 0 3px 0;*/
  margin: 0 auto;
  width: 100%;
  max-width: 500px;
  height: auto;
  max-height: calc(100% - 2.3em - 30px);
  overflow-y: auto;
}

#airport-switch li {
  list-style-type: none;
  padding: 8px 10px;
  /*padding: 5px 10px;*/
  /*padding: 0;*/
  margin-bottom: 2px;
}

#airport-switch li .difficulty {
  display: inline-block;
  width: 5em;
  font-weight: bold;
  font-size: 120%;
  margin-right: 0.25em;
  text-align: right;
  white-space: nowrap;
}

#airport-switch li .icao {
  display: inline-block;
  width: 4em;
  /*margin-right: */
  text-align: center;
  font-weight: bold;
}

#airport-switch li .name {
  display: inline-block;
  font-weight: bold;
}

#airport-switch li:hover {
  background-color: rgba(255, 255, 255, 0.1);
  cursor: pointer;
}

#airport-switch li.active {
  background-color: #354;
  cursor: pointer;
}

#airport-switch li.active:hover {
  cursor: auto;
}

#airport-list-notes {
  font-size: 70%;
  font-weight: normal;
  padding: 2px 0px 3px 0px;
  min-height: 0.8em;
}

#airport-list-notes .symbol {
  display: inline-block;
  text-align: "center";
  font-style: normal;
}

#airport-list-notes .words {
  display: inline-block;
  text-align: "center";
  font-style: italic;
  padding-left: 0.5em;
}

